--- a/index.html
+++ b/index.html
@@ -8,5 +8,114 @@
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
+    <header>
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <div class="top-section">
+        <a href="index.html"><img class="menu-logo-top" src="http://placehold.it/150x100" alt="technomart logo"></a>
+        <div class="search"></div>
+      </div>
+      <address>
+        <div class="phone-number"><p>+7 (812) 555-05-55</p></div>
+        <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </address>
+      <button class="enter">Войти</button>
+      <button class="registration">Регистрация</button>
+      <nav class="nav-top">
+        <ul class="main-menu">
+          <li>Главная</li>
+          <li>Компания</li>
+          <li>Каталог</li>
+          <li>Новости</li>
+          <li>Спецпредложения</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <p>
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <button>Подробнее о компании</button>
+      </section>
+      <section>
+        <h2>КОНТАКТЫ</h2>
+        <p>
+          Вы можете забрать товар сами,<br>
+          заехав в наш офис:
+        </p>
+        <div class="yandex-map"></div>
+        <button>Заблудились? НапиШИТЕ НАМ!</button>
+      </section>
+    </main>
+
+    <footer>
+      <a href="index.html"><img class="menu-logo-bottom" src="http://placehold.it/150x100" alt="technomart logo"></a>
+      <nav class="nav-bottom">
+        <ul class="main-menu">
+          <li>Главная</li>
+          <li>Компания</li>
+          <li>Каталог</li>
+          <li>Новости</li>
+          <li>Спецпредложения</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+        <ul class="category-menu">
+          <li>Главная</li>
+          <li>Компания</li>
+          <li>Каталог</li>
+          <li>Новости</li>
+          <li>Спецпредложения</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+      </nav>
+      <address>
+        <p class="address-bottom">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+          +7 (812) 555-05-55
+        </p>
+      </address>
+      <section class="copyright-section">
+        <h2 class="hidden">Копирайт</h2>
+        <p>© 2010–2019 Компания «Техномарт»
+          Все права защищены
+        </p>
+      </section>
+      <section class="social-networks">
+        <h2 class="hidden">Социальные сети</h2>
+        <ul class="soc-network-list">
+          <li class="vk">Вконтакте</li>
+          <li class="facebook">Facebook</li>
+          <li class="instagram">Instagram</li>
+        </ul>
+      </section>
+      <section class="feedback">
+        <h2>Обратная связь:</h2>
+        <p>
+          <a href="#">mail@htmlacademy.ru</a>
+        </p>
+      </section>
+      <section class="developer">
+        <h2 class="hidden">Разработчик</h2>
+        <p>
+          Разработано —
+          <a href="htmlacademy.ru">htmlacademy.ru</a>
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
