--- a/catalog.html
+++ b/catalog.html
@@ -5,19 +5,16 @@
     <title>HTML Academy: Техномарт</title>
 </head>
 <body>
-
-<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
         <a href="index.html"><img class="menu-logo-top" src="http://placehold.it/150x100" alt="technomart logo"></a>
         <div class="search"></div>
     </div>
-    <address>
+    <div class="address-top">
         <div class="phone-number"><p>+7 (812) 555-05-55</p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-    </address>
+    </div>
     <div class="user-block">Равшан Джамшутович<a href="#"><img src="http://placehold.it/150x100"></a></div>
     <nav class="user-breadcrumb-nav">
         <ul class="user-breadcrumb">
@@ -28,13 +25,13 @@
     <button class="registration">Регистрация</button>
     <nav class="nav-top">
         <ul class="main-menu">
-            <li>Главная</li>
-            <li>Компания</li>
-            <li>Каталог</li>
-            <li>Новости</li>
-            <li>Спецпредложения</li>
-            <li>Доставка</li>
-            <li>Контакты</li>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
         </ul>
     </nav>
 </header>
@@ -164,12 +161,12 @@
             <li>Контакты</li>
         </ul>
     </nav>
-    <address>
+    <div class="address-bottom">
         <p class="address-bottom">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             +7 (812) 555-05-55
         </p>
-    </address>
+    </div>
     <section class="copyright-section">
         <h2 class="hidden">Копирайт</h2>
         <p>© 2010–2019 Компания «Техномарт»
