--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         <a href="index.html"><img class="menu-logo-top" src="http://placehold.it/150x100" alt="technomart logo"></a>
         <div class="search"></div>
       </div>
-      <address>
+      <div class="address-top">
         <div class="phone-number"><p>+7 (812) 555-05-55</p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </address>
-      <button class="enter">Войти</button>
-      <button class="registration">Регистрация</button>
+      </div>
+      <a class="enter">Войти</a>
+      <a class="registration">Регистрация</a>
       <nav class="nav-top">
         <ul class="main-menu">
-          <li>Главная</li>
-          <li>Компания</li>
-          <li>Каталог</li>
-          <li>Новости</li>
-          <li>Спецпредложения</li>
-          <li>Доставка</li>
-          <li>Контакты</li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -83,12 +83,12 @@
           <li>Контакты</li>
         </ul>
       </nav>
-      <address>
+      <div class="address-bottom">
         <p class="address-bottom">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           +7 (812) 555-05-55
         </p>
-      </address>
+      </div>
       <section class="copyright-section">
         <h2 class="hidden">Копирайт</h2>
         <p>© 2010–2019 Компания «Техномарт»
