--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
       <section>
-        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <h2>Компания «Техномарт»</h2>
         <p>
           Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
         </p>
