Исправлен последний пункт хлебных крошек, убрана ссылка

--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
         <ul class="breadcrumb">
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Инструмент </a></li>
-            <li><a href="#">Перфораторы</a></li>
+            <li>Перфораторы</li>
         </ul>
     </nav>
     <section class="manufacturers">
