кнопка купить изменена на ссылку

--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
         <h2 class="hidden">Товары</h2>
         <div class="card">
             <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
             <p class="add-to-favorites"><button class="add-to-cart"></p>
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <p class="old-price">22500 Р.</p>
