--- a/catalog.html
+++ b/catalog.html
@@ -64,78 +64,80 @@
     </section>
     <section class="products">
         <h2 class="hidden">Товары</h2>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price">22500 Р.</p>
-            <p class="price">15500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 Р.</p>
-            <p class="price">25500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <p class="old-price"></p>
-            <p class="price">12500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 Р.</p>
-            <p class="price">25500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <p class="old-price"></p>
-            <p class="price">12500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price">22500 Р.</p>
-            <p class="price">15500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 Р.</p>
-            <p class="price">25500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <p class="old-price"></p>
-            <p class="price">12500 Р.</p>
-        </div>
-        <div class="card">
-            <img src="http://placehold.it/150x100" class="product-item-pic">
-            <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price">22500 Р.</p>
-            <p class="price">15500 Р.</p>
-        </div>
+        <ul class="products">
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p class="old-price">22500 Р.</p>
+                <p class="price">15500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <p class="old-price">30500 Р.</p>
+                <p class="price">25500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p class="old-price"></p>
+                <p class="price">12500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <p class="old-price">30500 Р.</p>
+                <p class="price">25500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p class="old-price"></p>
+                <p class="price">12500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p class="old-price">22500 Р.</p>
+                <p class="price">15500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <p class="old-price">30500 Р.</p>
+                <p class="price">25500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p class="old-price"></p>
+                <p class="price">12500 Р.</p>
+            </li>
+            <li class="card">
+                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p class="old-price">22500 Р.</p>
+                <p class="price">15500 Р.</p>
+            </li>
+        </ul>
     </section>
 </main>
 
