--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
     <header>
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
@@ -113,7 +110,7 @@
         <h2 class="hidden">Разработчик</h2>
         <p>
           Разработано —
-          <a href="htmlacademy.ru">htmlacademy.ru</a>
+          <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
         </p>
       </section>
     </footer>
