--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
         <h2 class="hidden">Разработчик</h2>
         <p>
             Разработано —
-            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+            <a target="_blank" href="https://htmlacademy.ru/">htmlacademy.ru</a>
         </p>
     </section>
 </footer>
