Исправлены ссылки на электронную почту

--- a/catalog.html
+++ b/catalog.html
@@ -186,7 +186,7 @@
     <section class="feedback">
         <h2>Обратная связь:</h2>
         <p>
-            <a href="#">mail@htmlacademy.ru</a>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
     </section>
     <section class="developer">
