Добавлены ссылки на телефоны

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
         <div class="search"></div>
     </div>
     <div class="address-top">
-        <div class="phone-number"><p>+7 (812) 555-05-55</p></div>
+        <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
     <div class="user-block">Равшан Джамшутович<a href="#"><img src="http://placehold.it/150x100"></a></div>
