--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
-    <div class="user-block">Равшан Джамшутович<a href="#"><img src="http://placehold.it/150x100"></a></div>
+    <div class="user-block">Равшан Джамшутович<a href="#"><img src="https://via.placeholder.com/20x18"></a></div>
     <nav class="user-breadcrumb-nav">
         <ul class="user-breadcrumb">
             <li><a href="#">Мои заказы </a></li>
