Правильно расставлены переносы и текст между тегами

--- a/catalog.html
+++ b/catalog.html
@@ -164,16 +164,11 @@
         </ul>
     </nav>
     <div class="address-bottom">
-        <p class="address-bottom">
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7 (812) 555-05-55
-        </p>
+        <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
     </div>
     <section class="copyright-section">
         <h2 class="hidden">Копирайт</h2>
-        <p>© 2010–2019 Компания «Техномарт»
-            Все права защищены
-        </p>
+        <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
     </section>
     <section class="social-networks">
         <h2 class="hidden">Социальные сети</h2>
