--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
     <main>
       <section>
         <h2>Компания «Техномарт»</h2>
-        <p>
-          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:
-        </p>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>Техномарт работает со многими транспортными компаниями:</p>
         <ul>
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -49,10 +44,7 @@
       </section>
       <section>
         <h2>КОНТАКТЫ</h2>
-        <p>
-          Вы можете забрать товар сами,<br>
-          заехав в наш офис:
-        </p>
+        <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
         <div class="yandex-map"></div>
         <button>Заблудились? НапиШИТЕ НАМ!</button>
       </section>
@@ -81,16 +73,11 @@
         </ul>
       </nav>
       <div class="address-bottom">
-        <p class="address-bottom">
-          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-          +7 (812) 555-05-55
-        </p>
+        <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
       </div>
       <section class="copyright-section">
         <h2 class="hidden">Копирайт</h2>
-        <p>© 2010–2019 Компания «Техномарт»
-          Все права защищены
-        </p>
+        <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
       </section>
       <section class="social-networks">
         <h2 class="hidden">Социальные сети</h2>
