Текст большими буквами заменен обычным на всех страницах

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <button>Подробнее о компании</button>
       </section>
       <section>
-        <h2>КОНТАКТЫ</h2>
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
         <div class="yandex-map"></div>
-        <button>Заблудились? НапиШИТЕ НАМ!</button>
+        <button>Заблудились? Напишите нам!</button>
       </section>
     </main>
 
