--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
 </header>
 
 <main>
-    <h1>ПЕРФОРАТОРЫ</h1>
+    <h1>Перфораторы</h1>
     <nav class="breadcrumb-nav">
         <ul class="breadcrumb">
             <li><a href="catalog.html">Каталог</a></li>
@@ -69,7 +69,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
             </li>
@@ -77,7 +77,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
@@ -85,7 +85,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
@@ -93,7 +93,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
@@ -101,7 +101,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
@@ -109,7 +109,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
             </li>
@@ -117,7 +117,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
@@ -125,7 +125,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
@@ -133,7 +133,7 @@
                 <img src="http://placehold.it/150x100" class="product-item-pic">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
             </li>
