Исправлены навигационные меню в футере на обеих страницах

--- a/catalog.html
+++ b/catalog.html
@@ -143,26 +143,21 @@
 
 <footer>
     <a href="index.html"><img class="menu-logo-bottom" src="http://placehold.it/150x100" alt="technomart logo"></a>
-    <nav class="nav-bottom">
-        <ul class="main-menu">
-            <li>Главная</li>
-            <li>Компания</li>
-            <li>Каталог</li>
-            <li>Новости</li>
-            <li>Спецпредложения</li>
-            <li>Доставка</li>
-            <li>Контакты</li>
-        </ul>
-        <ul class="category-menu">
-            <li>Главная</li>
-            <li>Компания</li>
-            <li>Каталог</li>
-            <li>Новости</li>
-            <li>Спецпредложения</li>
-            <li>Доставка</li>
-            <li>Контакты</li>
-        </ul>
-    </nav>
+    <ul class="main-menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+    </ul>
+    <ul class="category-menu">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+    </ul>
     <div class="address-bottom">
         <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
     </div>
