Теги section в футере заменены на теги div

--- a/catalog.html
+++ b/catalog.html
@@ -161,31 +161,27 @@
     <div class="address-bottom">
         <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
     </div>
-    <section class="copyright-section">
-        <h2 class="hidden">Копирайт</h2>
+    <div class="copyright-section">
         <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
-    </section>
-    <section class="social-networks">
-        <h2 class="hidden">Социальные сети</h2>
+    </div>
+    <div class="social-networks">
         <ul class="soc-network-list">
             <li class="vk">Вконтакте</li>
             <li class="facebook">Facebook</li>
             <li class="instagram">Instagram</li>
         </ul>
-    </section>
-    <section class="feedback">
-        <h2>Обратная связь:</h2>
+    </div>
+    <div class="feedback">
         <p>
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-    </section>
-    <section class="developer">
-        <h2 class="hidden">Разработчик</h2>
+    </div>
+    <div class="developer">
         <p>
             Разработано —
             <a target="_blank" href="https://htmlacademy.ru/">htmlacademy.ru</a>
         </p>
-    </section>
+    </div>
 </footer>
 </body>
 </html>
