--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
-    <div class="user-block">Равшан Джамшутович<a href="#"><img src="https://via.placeholder.com/20x18"></a></div>
+    <div class="user-block">Равшан Джамшутович<a href="#"><img src="https://via.placeholder.com/20x18" alt="user avatar"></a></div>
     <nav class="user-breadcrumb-nav">
         <ul class="user-breadcrumb">
             <li><a href="#">Мои заказы </a></li>
@@ -66,7 +66,7 @@
         <h2 class="hidden">Товары</h2>
         <ul class="products">
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -74,7 +74,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -82,7 +82,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -90,7 +90,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -98,7 +98,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -106,7 +106,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -114,7 +114,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -122,7 +122,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -130,7 +130,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic">
+                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
