Все кнопки заменены на ссылки на время до лекции о ссылках

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
             <li><a href="#">Личный кабинет</a></li>
         </ul>
     </nav>
-    <button class="registration">Регистрация</button>
+    <a href="#">Регистрация</a>
     <nav class="nav-top">
         <ul class="main-menu">
             <li><a href="#">Главная</a></li>
