--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <button>Подробнее о компании</button>
+        <a href="#">Подробнее о компании</a>
       </section>
       <section>
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
         <div class="yandex-map"></div>
-        <button>Заблудились? Напишите нам!</button>
+        <a href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
 
