Отредактированы названия фирм

--- a/catalog.html
+++ b/catalog.html
@@ -48,9 +48,9 @@
     <section class="manufacturers">
         <h2>Производители:</h2>
         <ul class="manufacturers-list">
-            <li><input type="checkbox" class="checkbox-square">BOSCH</li>
-            <li><input type="checkbox" class="checkbox-square">ИНТЕРСКОЛ</li>
-            <li><input type="checkbox" class="checkbox-square">MAKIta</li>
+            <li><input type="checkbox" class="checkbox-square">Bosch</li>
+            <li><input type="checkbox" class="checkbox-square">Интерскол</li>
+            <li><input type="checkbox" class="checkbox-square">Makita</li>
             <li><input type="checkbox" class="checkbox-square">Dewalt</li>
             <li><input type="checkbox" class="checkbox-square">Hitachi</li>
         </ul>
