Изменил вёрстку пользовательского меню, привёл её в единообразный вид для обеих страниц

--- a/catalog.html
+++ b/catalog.html
@@ -16,12 +16,10 @@
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
     <div class="user-block">Равшан Джамшутович<a href="#"><img src="https://via.placeholder.com/20x18" alt="user avatar"></a></div>
-    <nav class="user-breadcrumb-nav">
-        <ul class="user-breadcrumb">
+        <ul class="user-menu">
             <li><a href="#">Мои заказы </a></li>
             <li><a href="#">Личный кабинет</a></li>
         </ul>
-    </nav>
     <a href="#">Регистрация</a>
     <nav class="nav-top">
         <ul class="main-menu">
