--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
-      <a class="enter">Войти</a>
-      <a class="registration">Регистрация</a>
+      <ul class="user-menu">
+        <li><a class="enter" href="#">Войти</a></li>
+        <li><a class="registration" href="#">Регистрация</a></li>
+      </ul>
       <nav class="nav-top">
         <ul class="main-menu">
           <li><a href="#">Главная</a></li>
