--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html"><img class="menu-logo-top" src="http://placehold.it/150x100" alt="technomart logo"></a>
+        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo"></a>
         <div class="search"></div>
     </div>
     <div class="address-top">
@@ -72,7 +72,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -80,7 +80,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -88,7 +88,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -96,7 +96,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -104,7 +104,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -112,7 +112,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -120,7 +120,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -128,7 +128,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
                 <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -140,7 +140,7 @@
 </main>
 
 <footer>
-    <a href="index.html"><img class="menu-logo-bottom" src="http://placehold.it/150x100" alt="technomart logo"></a>
+    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo"></a>
     <ul class="main-menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
