--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </ul>
       <nav class="nav-top">
         <ul class="main-menu">
-          <li><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
