Лекция 4 Основное задание: теперь в ссылку обёрнут не только аватар пользователя но и его имя

--- a/catalog.html
+++ b/catalog.html
@@ -8,14 +8,14 @@
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo"></a>
+        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
         <div class="search"></div>
     </div>
     <div class="address-top">
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
-    <div class="user-block">Равшан Джамшутович<a href="#"><img src="https://via.placeholder.com/20x18" alt="user avatar"></a></div>
+    <div class="user-block"><a href="#">Равшан Джамшутович<img src="https://via.placeholder.com/20x18" alt="user avatar"></a></div>
         <ul class="user-menu">
             <li><a href="#">Мои заказы </a></li>
             <li><a href="#">Личный кабинет</a></li>
