--- a/catalog.html
+++ b/catalog.html
@@ -140,7 +140,7 @@
 </main>
 
 <footer>
-    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo"></a>
+    <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
     <ul class="main-menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
