--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-top" src="img/logo.svg" alt="technomart logo"></a>
+        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
         <div class="search"></div>
       </div>
       <div class="address-top">
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-      <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo"></a>
+      <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
         <ul class="main-menu">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
