добавлен текст в ссылку с классом add-to-favorites

--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
             <li class="card">
                 <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
