Лекция 4 Основное задание: добавлено поле поиска в хедер на обеих страницах

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"><p class="visually-hidden">Логотип Техномарт</p></a>
-        <div class="search"></div>
+        <form action="catalog.html" method="get">
+          <input type="search" name="search">
+        </form>
       </div>
       <div class="address-top">
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
