Лекция 4 Основное задание: исправлена ссылка на телефон в хедере и добавлена ссылка на телефон в футере для обеих страниц

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
         <a href="#" class="cart">Корзина: 0</a>
     </div>
     <div class="address-top">
-        <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
+        <a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
     <div class="user-block"><a href="#">Равшан Джамшутович<img src="img/icon-user.svg" alt="user avatar" width="20" height="18"></a></div>
@@ -167,7 +167,7 @@
         <li><a href="#">Спецпредложения</a></li>
     </ul>
     <div class="address-bottom">
-        <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
+        <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     </div>
     <div class="copyright-section">
         <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
