Дополнительные задачи по лекциям 2-5: разметил секции с популярными производителями и сервисами

--- a/index.html
+++ b/index.html
@@ -95,10 +95,29 @@
 
       <section class="popular-manufacturers">
         <h2>Популярные производители</h2>
+        <a href="#">Все производители</a>
+        <ul>
+          <li><a href="#">Bosch</a></li>
+          <li><a href="#">BMakita</a></li>
+          <li><a href="#">BDewalt</a></li>
+          <li><a href="#">BИнтерскол</a></li>
+          <li><a href="#">BHitachi</a></li>
+          <li><a href="#">BLG</a></li>
+          <li><a href="#">BAEG Power Solutions</a></li>
+          <li><a href="#">BMetabowerke</a></li>
+        </ul>
       </section>
 
       <section class="services">
         <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Кредит</a></li>
+        </ul>
+        <h3>Доставка</h3>
+        <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно бесплатно! <br>Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
       </section>
 
       <section>
