Тегам input раздела питания указан тип radio

--- a/catalog.html
+++ b/catalog.html
@@ -60,8 +60,8 @@
         </fieldset>
         <fieldset>
             <legend>Питание:</legend>
-            <label><input type="checkbox" name="battery" class="checkbox-round">Аккумуляторные</label>
-            <label><input type="checkbox" name="wired" class="checkbox-round">Сетевые</label>
+            <label><input type="radio" name="power" value="battery" class="checkbox-round">Аккумуляторные</label>
+            <label><input type="radio" name="power" value="wired" class="checkbox-round">Сетевые</label>
         </fieldset>
         <button class="show-products" type="submit">Показать</button>
     </form>
