Добавлена ссылка для оформления заказа

--- a/catalog.html
+++ b/catalog.html
@@ -17,6 +17,7 @@
         </form>
         <a href="#" class="favorites">Закладки: 0</a>
         <a href="#" class="cart">Корзина: 0</a>
+        <a href="#" class="create-order">Оформить заказ</a>
     </div>
     <div class="address-top">
         <a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
