Прописаны стили для текста в секции популярных товаров

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
 
       <section class="popular-products">
-        <h2>Популярные товары</h2>
+        <h2>Популярные товары:</h2>
         <a href="#">Все популярные товары</a>
         <ul>
           <li class="card">
