Добавлены стили для текста в секции популярных производителей

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
 
       <section class="popular-manufacturers">
-        <h2>Популярные производители</h2>
+        <h2>Популярные производители:</h2>
         <a href="#">Все производители</a>
         <ul>
           <li><a href="#"><img src="img/bosch.png" width="126" height="37" alt="Bosch"></a></li>
