Закончена стилизация текста страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
     </nav>
 </header>
 
-<main>
+<main class="catalog-main">
     <h1>Перфораторы</h1>
         <ul class="breadcrumb">
             <li><a href="catalog.html">Каталог</a></li>
@@ -50,9 +50,9 @@
             <li>Перфораторы</li>
         </ul>
 
-    <form action="catalog.html" method="get">
+    <form class="category-selection" action="catalog.html" method="get">
         <fieldset>
-            <legend>Производители</legend>
+            <legend>Производители:</legend>
             <label><input type="checkbox" name="Bosch" class="checkbox-square manufacturers">Bosch</label>
             <label><input type="checkbox" name="Интерскол" class="checkbox-square manufacturers">Интерскол</label>
             <label><input type="checkbox" name="Makita" class="checkbox-square manufacturers">Makita</label>
