Начал верстать сетку для верхней секции

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <div class="top-section">
         <div class="logo"><a href="index.html"><img class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart"></a></div>
-        <form action="catalog.html" method="get">
+        <form action="catalog.html" method="get" class="search-form">
           <label for="search-field">Поиск</label>
           <input type="search" name="search" id="search-field">
         </form>
