--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 <header class="main-header">
-    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
-        <form action="catalog.html" method="get">
+        <div class="logo"><a href="index.html"><img class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart"></a></div>
+        <form action="catalog.html" method="get"  class="search-form">
             <label for="search-field">Поиск</label>
             <input type="search" name="search" id="search-field">
         </form>
@@ -19,6 +18,7 @@
         <a href="#" class="cart">Корзина: 0</a>
         <a href="#" class="create-order">Оформить заказ</a>
     </div>
+    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="address-top">
         <a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
